# digit-recognizer

./: .gitignore  Makefile  README.md  dvc.yaml  local-setup.py  metrics.json  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: train-model.yml
data/: processed.dvc  raw.dvc
data/processed/: .gitignore
data/raw/: .gitignore  sample_submission.csv.dvc
models/: .gitignore
notebooks/: 001-data-exploration.ipynb  002-data-processing.ipynb  003-training-model.ipynb  004-evaluate-model.ipynb  005-create-submission.ipynb  03-training-model.ipynb
reports/: .gitignore
src/stages/: data_processing.py  eval.py  submission.py  train.py
src/utils/: data_loader.py  evaluate.py  load_params.py
